--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </div>
         </a>
         <div id="hamburger" class="block md:hidden">
-          <button class="border border-black hover:text-fuchsia-700 hover:border-fuchsia-700 flex items-center px-3 py-2 rounded">
+          <button class="border hover:border-yellow-500 hover:text-yellow-500 text-fuchsia-700 border-fuchsia-700 transition-colors flex items-center px-3 py-2 rounded">
             <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
               <title>Menu</title>
               <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/>
@@ -72,7 +72,7 @@
           <img class="mx-auto" src="images/Logo.svg" alt="Logo" width="80"> <!--Logo-->
         </div>
         <!--Content-->
-        <div id="school" class="bg-gray-100 dark:bg-black pt-5 rounded-tl-lg rounded-tr-lg">
+        <div id="school" class="bg-gray-100 dark:bg-black py-2 rounded-tl-lg rounded-tr-lg">
           <div class="text-center">
             <!--School-->
             <div class="bg-white dark:bg-neutral-900 dark:text-white rounded-xl p-10 m-5 shadow-md">
@@ -83,7 +83,7 @@
               <p class="mb-5">Bachelor of Science in Computer Science</p>
               <!--About me Tabs-->
               <!--Links-->
-              <div class="tabs  mb-10">
+              <div class="tabs mb-10">
                 <button class="tablinks" onclick="aboutSec(event, 'About')" id="default">
                   <p class="hover:text-yellow-500 transition text-3xl font-bold p-5">About</p>
                 </button>
@@ -126,44 +126,44 @@
             <!--Skills-->
             <h1 id="skills" class="text-3xl text-left text-fuchsia-700 font-bold pt-5 ml-10">Skills</h1>
             <div class="bg-white text-black dark:bg-neutral-900 dark:text-white  rounded-xl p-10 m-5 shadow-md">
-              <div class="grid grid-cols-2 md:grid-cols-4 gap-6 pt-10">
+              <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
                 <!--HTML-->
-                <div class="mb-5">
+                <div>
                   <img class="rounded-full border border-black mx-auto" src="images/HTML.svg" alt="HTML" width="80">
                   <p class="pt-2 text-lg">HTML</p>
                 </div>
                 <!--Tailwind-->
-                <div class="mb-5">
+                <div>
                   <img class="rounded-full border border-black mx-auto" src="images/Tailwind.svg" alt="Tailwind" width="80">
                   <p class="pt-2 text-lg">Tailwindcss</p>
                 </div>
                 <!--Github-->
-                <div class="mb-5">
+                <div>
                   <img class="rounded-full border border-black mx-auto" src="images/Github.svg" alt="Github" width="80">
                   <p class="pt-2 text-lg">Github</p>
                 </div>
                 <!--Figma-->
-                <div class="mb-5">
+                <div>
                   <img class="rounded-full border border-black mx-auto" src="images/Figma.svg" alt="Figma" width="80">
                   <p class="pt-2 text-lg">Figma</p>
                 </div>
                 <!--Java-->
-                <div class="mb-5">
+                <div>
                   <img class="rounded-full border border-black mx-auto" src="images/Java.svg" alt="Java" width="80">
                   <p class="pt-2 text-lg">Java</p>
                 </div>
                 <!--C++-->
-                <div class="mb-5">
+                <div>
                   <img class="rounded-full border border-black mx-auto" src="images/C++.svg" alt="C++" width="80">
                   <p class="pt-2 text-lg">C++</p>
                 </div>
                 <!--Python-->
-                <div class="mb-5">
+                <div>
                   <img class="rounded-full border border-black mx-auto" src="images/Python.svg" alt="Python" width="80">
                   <p class="pt-2 text-lg">Python</p>
                 </div>
                 <!--React-->
-                <div class="mb-5">
+                <div>
                   <img class="rounded-full border border-black mx-auto" src="images/React.svg" alt="React" width="80">
                   <p class="pt-2 text-lg">React</p>
                 </div>
@@ -190,7 +190,7 @@
                   </p>
                 </div>
                 <!-- Right container -->
-                <div class="">
+                <div>
                   <img class="mx-auto rounded-lg md:min-h-full" src="images/LiveWaveform.png" alt="Mockup of future project using Spotify" width="550">
                 </div>
               </div>
@@ -200,7 +200,7 @@
             <div class="md:flex">
               <!-- Playlist Covers -->
               <div class="bg-white dark:bg-neutral-900 dark:text-white rounded-xl p-10 md:p-0  m-5 shadow-md">
-                <div class="">
+                <div>
                   <!-- Left container -->
                   <div class="p-10  md:text-left">
                     <a href="https://www.figma.com/file/wbxXLggR5uTiDMxChygNsr/Playlist-Cover?node-id=0%3A1" target="_blank">
@@ -221,7 +221,7 @@
               <!-- End Playlist Covers -->
               <!-- Music Mockup -->
               <div class="bg-white dark:bg-neutral-900 dark:text-white rounded-xl p-10 md:p-0 m-5 shadow-md">
-                <div class="">
+                <div>
                   <!-- Left container -->
                   <div class="p-10 md:text-left">
                     <a href="https://www.figma.com/file/5NJoulTAhCrqaZjrRIw6ju/Song-control?node-id=0%3A1" target="_blank">
@@ -254,16 +254,16 @@
                     Building full stack programs using React, 
                     javascript/typescript (frontend) and Java, Spring boot, JUnit (backend)
                   </p>
-                  <p class="text-lg mt-2">
+                  <p class="text-lg mt-2 md:mt-5">
                     Partook in the launch of a new customer facing product launch that has been in development for over a year
                   </p>
-                  <p class="text-lg mt-2">
+                  <p class="text-lg mt-2 md:mt-5">
                     Helped start up another internal product with other interns with the assistance of senior developers
                   </p>
-                  <p class="text-lg mt-2">
+                  <p class="text-lg mt-2 md:mt-5">
                     Paired programming and test driven development
                   </p>
-                  <p class="text-lg mt-2">
+                  <p class="text-lg mt-2 md:mt-5">
                     Utilized terminal to perform git commands
                   </p>
                 </div>
@@ -284,7 +284,7 @@
                     Highly skilled at uncovering customers' needs, 
                     then following through with enlightening solutions
                   </p>
-                  <p class="text-lg mt-2">
+                  <p class="text-lg mt-2 md:mt-5">
                     Maintaining visual merchandising and assisting team members
                   </p>
                   <p class="text-lg mt-2">
@@ -292,7 +292,7 @@
                   </p>
                 </div>
                 <!-- Right container -->
-                <div class="md:p-10">
+                <div class="md:p-10 md:mt-5">
                   <img class="mx-auto" src="images/Apple.svg" alt="Image of the Apple logo" width="250">
                 </div>
               </div>
@@ -307,10 +307,10 @@
                   <p class="text-lg mt-10">
                     Follow agile methodology to develop and test new features
                   </p>
-                  <p class="text-lg mt-2">
+                  <p class="text-lg mt-2 md:mt-5">
                     Utilize Figma to storyboard visualizations for front end development
                   </p>
-                  <p class="text-lg mt-2">
+                  <p class="text-lg mt-2 md:mt-5">
                     Create documentation to streamline development
                   </p>
                 </div>
@@ -327,23 +327,23 @@
               <h1 id="contacts" class="text-fuchsia-700 text-3xl text-left font-bold pt-5 ml-10">Contact</h1>
               <div class="bg-white dark:bg-neutral-900 dark:text-white rounded-xl p-5 m-5 shadow-md">
                 <div class="p-4">
-                  <div class="flex flex-row justify-center">
+                  <div class="flex justify-center">
                     <a href="https://www.linkedin.com/in/oke-oghene-amuwha-1b1489203/" target="_blank">
                       <div class="m-2 md:m-5 hover:text-yellow-500 transition">
-                        <img class="rounded-full mx-auto border border-black" src="images/LinkedIn.svg" alt="Linkedin" width="50">
-                        <p class="pt-2 text-sm">LinkedIn</p>
+                        <img class="rounded-full mx-auto border border-black" src="images/LinkedIn.svg" alt="Linkedin" width="80">
+                        <p class="pt-2 text-md">LinkedIn</p>
                       </div>
                     </a>
                     <a href="mailto: amuwhao46@gmail.com">
                       <div class="m-2 md:m-5 hover:text-yellow-500 transition">
-                        <img class="rounded-full mx-auto border border-black" src="images/Mail.svg" alt="Mail" width="50">
-                        <p class="pt-2 text-sm">Mail</p>
+                        <img class="rounded-full mx-auto border border-black" src="images/Mail.svg" alt="Mail" width="80">
+                        <p class="pt-2 text-md">Mail</p>
                       </div>
                     </a>
                     <a href="https://github.com/amuwhao46" target="_blank">
                       <div class="m-2 md:m-5 hover:text-yellow-500 transition">
-                        <img class="rounded-full mx-auto border border-black" src="images/Github.svg" alt="Github" width="50">
-                        <p class="pt-2 text-sm">Github</p>
+                        <img class="rounded-full mx-auto border border-black" src="images/Github.svg" alt="Github" width="80">
+                        <p class="pt-2 text-md">Github</p>
                       </div>
                     </a>
                   </div>
