Slight design changes

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   </head>
   <!--Website by Oke-Oghene Amuwha-->
   <!--Body-->
-  <body>
+  <body class="bg-gray-200 dark:bg-black">
     <!--Header-->
     <header>
       <!--Navbar-->
-      <nav id="navbar" class="fixed bg-gray-200/50 dark:bg-neutral-600/50 backdrop-blur inset-x-0 flex flex-center justify-between flex-wrap p-5 z-5 md:mx-10 md:mt-5 shadow-xl md:rounded-lg rounded-bl-lg rounded-br-lg">
+      <nav id="navbar" class="fixed bg-gray-200/50 dark:bg-neutral-700/50 backdrop-blur inset-x-0 flex flex-center justify-between flex-wrap p-5 z-5 md:mx-10 md:mt-5 shadow-xl md:rounded-lg rounded-bl-lg rounded-br-lg">
         <a href="#">
           <div class="text-fuchsia-700 flex items-center flex-shrink-0 mr-6">
             <img class="fill-current h-8 w-8 mr-2" src="images/Logo.svg" alt="Logo" width="20">
@@ -72,7 +72,7 @@
           <img class="mx-auto" src="images/Logo.svg" alt="Logo" width="80"> <!--Logo-->
         </div>
         <!--Content-->
-        <div id="school" class="bg-gray-100 dark:bg-black py-2 rounded-tl-lg rounded-tr-lg">
+        <div id="school" class="bg-gray-100/95 dark:bg-black py-2 rounded-tl-lg rounded-tr-lg">
           <div class="text-center">
             <!--School-->
             <div class="bg-white dark:bg-neutral-900 dark:text-white rounded-xl p-10 m-5 shadow-md">
