Minor changes for dark mode

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <img class="mx-auto" src="images/Logo.svg" alt="Logo" width="80"> <!--Logo-->
       </div>
       <!--Content-->
-      <div id="school" class="bg-gray-200 md:bg-gray-200/50 md:backdrop-blur-md dark:bg-black z-0 py-2 rounded-tl-lg rounded-tr-lg">
+      <div id="school" class="bg-gray-200 md:bg-gray-200/50 md:backdrop-blur-md dark:bg-black md:dark:bg-black z-0 py-2 rounded-tl-lg rounded-tr-lg">
         <div class="text-center">
           <!--School-->
           <div class="bg-white dark:bg-neutral-900 dark:text-white rounded-xl p-10 m-5 shadow-md">
