Added link to website github

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <!--Website by Oke-Oghene Amuwha-->
   <!--Body-->
-  <body class="bg-gray-200 dark:bg-black bg-fixed bg-no-repeat bg-center bg-cover h-screen" style="background-image: url(images/City.JPG)">
+  <body class="bg-gray-200 dark:bg-black bg-fixed bg-no-repeat bg-center bg-cover min-h-full" style="background-image: url(images/City.JPG)">
     <!--Header-->
     <header>
       <!--Navbar-->
@@ -201,7 +201,9 @@
               <div>
                 <!-- Left container -->
                 <div class="p-10 md:text-left">
-                  <h1 class="text-blue-700 text-2xl font-bold">Website</h1>
+                  <a href="https://github.com/amuwhao46/Portfolio--official-" target="_blank">
+                    <h1 class="text-blue-700 hover:text-blue-400 transition text-2xl font-bold">Website Portfolio</h1>
+                  </a>
                   <p class="text-lg mt-10">
                     I made this Website using HTML, Javascript and TailwindCSS. Over the course of my journey creating
                     this website I've learned how to utilize Tailwind to style my webpage with a utility-first approach
