--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <!--Website by Oke-Oghene Amuwha-->
   <!--Body-->
-  <body class="safari bg-gray-200 dark:bg-black bg-fixed bg-no-repeat bg-center bg-cover" style="background-image: url(images/City.JPG)">
+  <body class="bg-gray-200 dark:bg-black bg-fixed bg-no-repeat bg-center bg-cover" style="background-image: url(images/City.JPG)">
     <!--Header-->
     <header>
       <!--Navbar-->
