Updated database project section

--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
               <div class="md:m-5">
                 <img
                   class="mx-auto rounded-lg"
-                  src="images/Database.png"
+                  src="images/Database-proj.gif"
                   alt="Spotify mock design from Figma"
                   width="600"
                 />
