Updated website with current information

--- a/index.html
+++ b/index.html
@@ -300,44 +300,51 @@
         >
           Projects
         </h1>
-        <!-- Live Waveform -->
+        <!-- Budgie -->
         <div
           class="m-5 rounded-xl bg-white p-10 shadow-md dark:bg-neutral-900 dark:text-white md:p-0"
         >
           <div class="md:flex">
             <!-- Left container -->
             <div class="p-10 md:text-left">
-              <a href="https://github.com/amuwhao46/nowplaying" target="_blank">
+              <a href="https://github.com/WSU-4110/budgie" target="_blank">
                 <h1
                   class="text-2xl font-bold text-blue-700 transition hover:text-blue-400"
                 >
-                  Live Waveform
+                  Budgie
                 </h1>
               </a>
               <p class="mt-10 text-lg">
-                Trying to implement Spotify's API to show a live waveform of the
-                current song being played. The webpage dynamically switches the
-                album cover, Song name, and artist name. The background and the
-                "light shapes" also move with the beat of the current song
+                This project is to help users who may not be financially
+                literate but want to start saving money for the future. It is
+                targeted towards people who are in secondary education or
+                college
               </p>
               <p class="mt-2 text-lg">
-                This project uses react and Spotify's to work. It is still a
-                work in progress because I'm currently teaching myself react and
-                API requests and responses
+                The project is built in Flutter and made to run on iOS and
+                Android devices. Using firebase as the backend, the user will be
+                able to authenticate their registered account and have access to
+                their current budgets and expenses
+              </p>
+              <p class="mt-2 text-lg">
+                Users will be able to access the tips page to gain more insight
+                into the importance of budgeting and financing. Additionally
+                there will be tips in different areas of the application to help
+                users understand what the purpose of the function is for
               </p>
             </div>
             <!-- Right container -->
             <div class="md:m-5">
               <img
                 class="mx-auto rounded-lg"
-                src="images/LiveWaveform.png"
+                src="images/Budgie.png"
                 alt="Mockup of future project using Spotify"
                 width="450"
               />
             </div>
           </div>
         </div>
-        <!-- End Live Waveform -->
+        <!-- End Budgie -->
         <!-- Display side by side -->
         <div class="md:flex">
           <!-- Website Portfolio -->
@@ -655,10 +662,7 @@
                     <p class="text-md pt-2">LinkedIn</p>
                   </div>
                 </a>
-                <a 
-                  href="mailto: amuwhao46@gmail.com"
-                  rel="noreferrer"
-                >
+                <a href="mailto: amuwhao46@gmail.com" rel="noreferrer">
                   <div class="m-2 transition hover:text-blue-400 md:m-5">
                     <img
                       class="mx-auto rounded-full border border-black"
@@ -669,11 +673,11 @@
                     <p class="text-md pt-2">Mail</p>
                   </div>
                 </a>
-                <a 
-                    href="https://github.com/amuwhao46" 
-                    rel="noreferrer"
-                    target="_blank"
-                  >
+                <a
+                  href="https://github.com/amuwhao46"
+                  rel="noreferrer"
+                  target="_blank"
+                >
                   <div class="m-2 transition hover:text-blue-400 md:m-5">
                     <img
                       class="mx-auto rounded-full border border-black"
